// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render is renders simple markup 1`] = `"<div>Hello Majo</div>"`;

exports[`render should not render boolean 1`] = `"<div></div>"`;

exports[`render should properly set checked false attribute also as property 1`] = `false`;

exports[`render should properly set checked false attribute also as property 2`] = `"<input>"`;

exports[`render should properly set checked true attribute also as property 1`] = `true`;

exports[`render should properly set checked true attribute also as property 2`] = `"<input checked=\\"\\">"`;

exports[`render should properly set disabled false attribute also as property 1`] = `false`;

exports[`render should properly set disabled false attribute also as property 2`] = `"<input>"`;

exports[`render should properly set disabled true attribute also as property 1`] = `true`;

exports[`render should properly set disabled true attribute also as property 2`] = `"<input disabled=\\"\\">"`;

exports[`render should properly set value attribute also as property 1`] = `"value"`;

exports[`render should properly set value attribute also as property 2`] = `"<input value=\\"value\\">"`;

exports[`render should render array of children 1`] = `"<div><span>Hello</span><span>Pawel</span></div>"`;

exports[`render should render empty tag 1`] = `"<div><span></span></div>"`;

exports[`render should render functional component 1`] = `"<div><span>Majo</span></div>"`;

exports[`render should render nothing if try to render object 1`] = `"<div></div>"`;

exports[`render should render number 1`] = `"<div>1</div>"`;

exports[`render should support dynamic and static attributes 1`] = `"<span style=\\"color: blue;\\" class=\\"aclasse\\">Name</span>"`;

exports[`render should support rerender of child component 1`] = `
"<div>
            <span>Header</span>
            <span>Majo</span>
            <span>Footer</span>
        </div>"
`;

exports[`render should support rerender of child component 2`] = `
"<div>
            <span>Header</span>
            <span>Olo</span>
            <span>Footer</span>
        </div>"
`;
